@startuml task-state-machine
!theme plain
skinparam backgroundColor #FEFEFE

title Task State Machine (Default Configuration)

state "pending" as pending : Initial state
state "assigned" as assigned : Push coordination
state "working" as working : **Timed state**\nAccumulates time_actual_ms
state "completed" as completed : Terminal (success)
state "failed" as failed : Terminal (retriable)
state "cancelled" as cancelled : Terminal (abandoned)

[*] --> pending : create()

pending --> assigned : update(assignee=X)
pending --> working : claim() / update(status)
pending --> cancelled : update(status)

assigned --> working : claim() by assignee
assigned --> pending : release
assigned --> cancelled : update(status)

working --> completed : update(status)
working --> failed : update(status)
working --> pending : release / disconnect

failed --> pending : retry

completed --> [*]
cancelled --> [*]

note right of working
  Only timed states contribute
  to time_actual_ms tracking.
  
  Worker heartbeat refreshed
  via thinking() calls.
end note

note left of assigned
  Push coordination:
  Coordinator assigns task
  to specific worker.
end note

@enduml
